# universal-data-connector

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/src/udc/: __init__.py
backend/src/udc/api/: app.py  dependencies.py  errors.py
backend/src/udc/api/routers/: connectors.py  data.py  jobs.py  mappings.py  schema_diff.py
backend/src/udc/connectors/: __init__.py  base.py  csv.py  json_api.py  postgres.py
backend/src/udc/core/: __init__.py  _utils.py  config.py  connector_registry.py  data_store.py  job_runner.py  job_store.py  logging.py  sampler.py  sync.py  versioning.py
backend/src/udc/mapper/: __init__.py  canonical.py  mapper.py  models.py  prompt.py  reconcile.py  store.py  transform.py
backend/src/udc/writers/: __init__.py  base.py  duckdb_writer.py  parquet.py  postgres_writer.py
cli/: pyproject.toml
cli/src/udc_cli/: main.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Layout.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Modal.tsx  ProgressBar.tsx  Tooltip.tsx
frontend/src/pages/: ConnectorWizard.tsx  DataPreview.tsx  JobDashboard.tsx  MappingInspector.tsx  SchemaDiff.tsx  SourceComparison.tsx
infra/: Makefile  docker-compose.yml
tests/integration/: test_postgres_connector.py
tests/unit/: test_app.py  test_auth.py  test_config.py  test_connector_registry.py  test_connectors_router.py  test_data_router.py  test_data_store.py  test_job_store.py  test_jobs_router.py  test_sampler.py  test_writers.py
tests/unit/connectors/: test_csv_connector.py  test_json_api_connector.py
tests/unit/mapper/: test_mapper.py  test_reconcile.py  test_router.py  test_store.py  test_transform.py
