[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "udc"
version = "0.1.0"
description = "Universal Data Connector + LLM Schema Mapper"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "udc" }]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "duckdb>=0.10.0",
    "pyarrow>=15.0.0",
    "anthropic>=0.20.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "faker>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
udc = "udc_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/udc"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
# E501: line length handled by formatter
# B008: FastAPI's dependency injection pattern requires Depends() in defaults
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["udc"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/udc"]
omit = ["tests/*"]
